@@ -7,6 +7,8 @@ Panelizer 8.x-3.x-dev, xxxx-xx-xx
 #2835590 by DamienMcKenna: Hide the custom Panelizer field, it's no longer used.
 #2800991 by garethhallnz: Allow other modules to change the view_mode being
   rendered.
+#2847351 by porchlight, rvillan, DamienMcKenna: Permission to 'Set as Default'
+  in the Panelizer IPE.
 
 
 Panelizer 8.x-3.0-alpha3, 2016-12-15
